--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="images/logoweb.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pizza Hut Promotions</title>
+  <title>Pizza Hut</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <header>
-    <div class="left-group">
+    <div class="left-header">
       <img class="logo" src="images/logo.png" alt="Pizza Hut Logo"> <br>
       <span class="order-label">Choose Store and Order Type</span>
       <div class="order-type">
@@ -26,7 +27,7 @@
 
   <br><br>
 
-   <ul class="menu">
+   <ul class="bar">
     <li><a href="#promotion">Promotion</a></li>
     <li><a href="#combo">Combo</a></li>
     <li><a href="#pizza">Pizza</a></li>
