--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <label for="delivery">Delivery</label>
       </div>
     </div>
+
+    <div class="right-header">
+      <img src="images/icon-user.png" style="width: auto;" height="50px" alt="icon">
+      <a href="#" style="color: black;">Login/Sign up</a>
+    </div>
   </header>
 
   <br><br>
