--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="images/logoweb.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pizza Hut</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -27,12 +27,18 @@
     <div class="right-header">
       <img src="images/icon-user.png" style="width: auto;" height="50px" alt="icon">
       <a href="#" style="color: black;">Login/Sign up</a>
-    </div>
+      <div class="lang-dropdown">
+        <button class="lang-button">
+          <img src="images/flag eng.png" alt="English" class="flag-icon">
+          <span class="arrow-down">&#9662;</span>
+        </button>
+      </div>
+      <a href="#"><img style="width: auto;" height="30px" src="images/cart.png" alt="cart"></a>
   </header>
 
   <br><br>
 
-   <ul class="bar">
+  <ul class="bar">
     <li><a href="#promotion">Promotion</a></li>
     <li><a href="#combo">Combo</a></li>
     <li><a href="#pizza">Pizza</a></li>
@@ -44,7 +50,7 @@
     <li><a href="#Wings">Wings</a></li>
     <li><a href="#Drink & Dessert">Drink & Dessert</a></li>
   </ul>
-</div>
+  </div>
 
 
   <br><br>
@@ -56,11 +62,12 @@
         <div>
           <div class="promo-title">Hut Buy 1 Get 1 Free Pizza every toppings, every crust, everyday</div>
           <div class="promo-desc">
-                Hut Buy 1 Get 1 Free with New crust Jumbo Cheesy Sausage with Crispy Bacon, Napoli Pizza with Airy Dough, and a variety of pizza options including Seafood, Supreme, Deluxe, and Lover Toppings.
-            </div>
+            Hut Buy 1 Get 1 Free with New crust Jumbo Cheesy Sausage with Crispy Bacon, Napoli Pizza with Airy Dough,
+            and a variety of pizza options including Seafood, Supreme, Deluxe, and Lover Toppings.
+          </div>
         </div>
         <div class="price-add">
-          <span class="promo-price">Buy 1 Free 1</span>
+          <span class="btn">Buy 1 Free 1</span>
           <button class="btn">Add</button>
         </div>
       </div>
@@ -72,8 +79,10 @@
         <div>
           <div class="promo-title">The Krypton Combo</div>
           <div class="promo-desc">
-                The Krypton Combo, supercharge your energy with 6 delicious menus: 2 Lover Pizzas, Chicken Steak, New Orleans Chicken, Spaghetti, 2 Pepsi glasses, along with a Superman Limited Edition box and enjoy yourself to the fullest, get 1 free movie ticket!
-            </div>
+            The Krypton Combo, supercharge your energy with 6 delicious menus: 2 Lover Pizzas, Chicken Steak, New
+            Orleans Chicken, Spaghetti, 2 Pepsi glasses, along with a Superman Limited Edition box and enjoy yourself to
+            the fullest, get 1 free movie ticket!
+          </div>
         </div>
         <div class="price-add">
           <span class="promo-price">฿699</span>
@@ -88,7 +97,8 @@
       <div class="promo-content">
         <div>
           <div class="promo-title">Buy 1 Get 1 French Fries</div>
-          <div class="promo-desc">Buy 1 French Fries, Get 1 Free! Double the crunch, double the fun! Grab your golden, crispy French Fries. </div>
+          <div class="promo-desc">Buy 1 French Fries, Get 1 Free! Double the crunch, double the fun! Grab your golden,
+            crispy French Fries. </div>
         </div>
         <div class="price-add">
           <span class="promo-price">฿79</span>
@@ -103,7 +113,8 @@
       <div class="promo-content">
         <div>
           <div class="promo-title">Buy 1 get 1 Baked Macaroni</div>
-          <div class="promo-desc">Buy 1 get 1 free Baked Macaroni delicious with Baked Macaroni in White Cream Sauce, Baked Macaroni Cheesy Shrimp and Baked Macaroni Italian Chicken super delicious cheese baked menu</div>
+          <div class="promo-desc">Buy 1 get 1 free Baked Macaroni delicious with Baked Macaroni in White Cream Sauce,
+            Baked Macaroni Cheesy Shrimp and Baked Macaroni Italian Chicken super delicious cheese baked menu</div>
         </div>
         <div class="price-add">
           <span class="promo-price">฿79</span>
@@ -113,7 +124,7 @@
       </div>
     </div>
 
-     <div class="promo-card">
+    <div class="promo-card">
       <img src="images/p5.jpg" alt=" Baked Macaroni">
       <div class="promo-content">
         <div>
